# Rushframe

./: .gitignore  AGENTS.md  AGENT_CONTEXT.md  LOCAL_AGENT_INSTRUCTIONS.md  README.md  RUSHFRAME_PERFORMANCE_OPTIMIZATION_PLAN.md  RUSHFRAME_VS_OPENCUT.md  Rushframe.slnx  SOUND_LIBRARY_INTEGRATION_PLAN.md  prompt draft - batman duel tiktok temp.md  prompt draft.md  requirements-intelligence-advanced.txt  requirements-intelligence-dev.txt  requirements-intelligence.txt
.serena/: project.yml
assets/audio-library-downloads/: Download-FreeAudioPacks.ps1  README.md
benchmarks/Rushframe.Benchmarks/: Program.cs  README.md  Rushframe.Benchmarks.csproj
native/Rushframe.Native/: CMakeLists.txt
native/Rushframe.Native/include/: rushframe_native.h
native/Rushframe.Native/src/: frame_buffer.cpp  native_error.hpp  pixel_conversion.cpp
qa testing/: AGENTS.md  DEFECT_REPORT.md  DETAILED_QA_TESTING_PLAN.md  FULL_CODEBASE_AUDIT_2026-07-14.md  QA_EXECUTION_RESULTS.md  QA_TESTING_PLAN.md
qa testing/harness/: Program.cs  Rushframe.QaHarness.csproj
rushframe_intelligence/: README.md  __main__.py  agent_context.py  audio_analyzer.py  backend.py  cache.py  capabilities.py  context_index.py  duplicate_detector.py  frame_sampler.py  gemini_analyzer.py  models.py  moment_builder.py  optional_adapters.py  pipeline.py  probe.py  scene_detector.py  serialization.py  sound_library.py  transcriber.py  visual_analyzer.py  visual_quality.py  worker.py
scripts/: setup-intelligence.ps1
src/Rushframe.Domain/: Mask.cs  (+22 more)
tests/: test_media_intelligence_v2.py  visual_provider_adapters_test.py
(+255 files in other folders)
